# ESET420

./: .gitmodules  README.md
BaseUnit/: BaseUnit.c  BaseUnit.py  CMakeLists.txt
ECGSignals/: ECGMom.csv  ECGSum.csv  Header File.hdr  OriginalECGRacapMom.hdr
ECGSignals/Python/: CreateBabySignal.py  CreateCSVForArb.py  CreateSumSignal.py  HudsonSignal.py
OnBody/: .OnBody.ino.swp  OnBody.c  OnBody.ino
base-unit/: BaseUnit.c
on-body/: OnBody.c
src/base-unit/: BaseUnit  BaseUnit.c  HelloWorld  HelloWorld.c
